[gd_scene load_steps=9 format=3 uid="uid://12egl2mbeuby"]

[ext_resource type="Texture2D" uid="uid://c4apqbj3lt2in" path="res://assets/battle.png" id="1_w27ij"]
[ext_resource type="Script" path="res://scenes/battle/information_area.gd" id="2_rlbt8"]
[ext_resource type="Script" path="res://scenes/battle/element_explanations.gd" id="3_ubrpg"]
[ext_resource type="Texture2D" uid="uid://dranj4xyt7c1c" path="res://assets/color-circle.png" id="4_ie0rv"]
[ext_resource type="Script" path="res://scenes/battle/hand_area.gd" id="5_uw4m5"]
[ext_resource type="Script" path="res://scenes/battle/debug_area.gd" id="6_65hhk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jlu6y"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yiulb"]
radius = 40.0

[node name="Battle" type="CanvasLayer"]
metadata/_edit_lock_ = true

[node name="BackgroundSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_w27ij")
centered = false
metadata/_edit_lock_ = true

[node name="TempRect" type="ColorRect" parent="."]
z_index = -1
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2
color = Color(0.633757, 0.633757, 0.633757, 1)

[node name="UserInterface" type="Control" parent="."]
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2

[node name="InformationArea" type="Control" parent="UserInterface"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2
script = ExtResource("2_rlbt8")

[node name="ElementInformation" type="VBoxContainer" parent="UserInterface/InformationArea"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 180.0
script = ExtResource("3_ubrpg")

[node name="CenterContainer" type="CenterContainer" parent="UserInterface/InformationArea/ElementInformation"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="CenteredControl" type="Control" parent="UserInterface/InformationArea/ElementInformation/CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="FusionSprite" type="Sprite2D" parent="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl"]
texture = ExtResource("4_ie0rv")

[node name="PyroCircleArea" type="Area2D" parent="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl"]

[node name="PyroCollision" type="CollisionShape2D" parent="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl/PyroCircleArea"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_jlu6y")

[node name="HydroCircleArea" type="Area2D" parent="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl"]

[node name="HydroCollision" type="CollisionShape2D" parent="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl/HydroCircleArea"]
position = Vector2(10, 5)
shape = SubResource("CircleShape2D_jlu6y")

[node name="EarthCircleArea" type="Area2D" parent="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl"]

[node name="EarthCollision" type="CollisionShape2D" parent="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl/EarthCircleArea"]
position = Vector2(-10, 5)
shape = SubResource("CircleShape2D_jlu6y")

[node name="WanedCircleArea" type="Area2D" parent="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl"]

[node name="WanedCollision" type="CollisionShape2D" parent="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl/WanedCircleArea"]
shape = SubResource("CircleShape2D_yiulb")

[node name="StrengthsMarginContainer" type="MarginContainer" parent="UserInterface/InformationArea/ElementInformation"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="StrengthsLabel" type="RichTextLabel" parent="UserInterface/InformationArea/ElementInformation/StrengthsMarginContainer"]
layout_mode = 2
theme_override_constants/line_separation = 2
bbcode_enabled = true
text = "TEMPLATE TEXT"

[node name="WeaknessesMarginContainer" type="MarginContainer" parent="UserInterface/InformationArea/ElementInformation"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="WeaknessesLabel" type="RichTextLabel" parent="UserInterface/InformationArea/ElementInformation/WeaknessesMarginContainer"]
layout_mode = 2
theme_override_constants/line_separation = 2
text = "TEMPLATE TEXT"

[node name="CardInformation" type="VBoxContainer" parent="UserInterface/InformationArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UserInterface/InformationArea/CardInformation"]
layout_mode = 2
text = "wow this is a nice card"

[node name="CardArea" type="Control" parent="UserInterface"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -52.0
offset_right = 224.0
grow_vertical = 0
mouse_filter = 2

[node name="DeckCenterer" type="CenterContainer" parent="UserInterface/CardArea"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="HandCenterer" type="CenterContainer" parent="UserInterface/CardArea"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
grow_horizontal = 0
grow_vertical = 2

[node name="HandArea" type="Control" parent="UserInterface/CardArea/HandCenterer"]
layout_mode = 2
mouse_filter = 1
script = ExtResource("5_uw4m5")

[node name="BattleArea" type="Control" parent="UserInterface"]
anchors_preset = 0
offset_right = 224.0
offset_bottom = 112.0
mouse_filter = 1

[node name="DebugArea" type="VBoxContainer" parent="."]
offset_right = 120.0
offset_bottom = 24.0
size_flags_horizontal = 0
script = ExtResource("6_65hhk")

[node name="HBoxContainer" type="HBoxContainer" parent="DebugArea"]
layout_mode = 2

[node name="Save" type="Button" parent="DebugArea/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Draw" type="Button" parent="DebugArea/HBoxContainer"]
layout_mode = 2
text = "Draw"

[node name="ResetState" type="Button" parent="DebugArea/HBoxContainer"]
layout_mode = 2
text = "Reset state"

[node name="Label" type="Label" parent="DebugArea"]
layout_mode = 2
text = "Debug text"

[connection signal="mouse_entered" from="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl/PyroCircleArea" to="UserInterface/InformationArea/ElementInformation" method="_on_pyro_circle_area_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl/PyroCircleArea" to="UserInterface/InformationArea/ElementInformation" method="_on_pyro_circle_area_mouse_exited"]
[connection signal="mouse_entered" from="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl/HydroCircleArea" to="UserInterface/InformationArea/ElementInformation" method="_on_hydro_circle_area_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl/HydroCircleArea" to="UserInterface/InformationArea/ElementInformation" method="_on_hydro_circle_area_mouse_exited"]
[connection signal="mouse_entered" from="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl/EarthCircleArea" to="UserInterface/InformationArea/ElementInformation" method="_on_earth_circle_area_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl/EarthCircleArea" to="UserInterface/InformationArea/ElementInformation" method="_on_earth_circle_area_mouse_exited"]
[connection signal="mouse_entered" from="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl/WanedCircleArea" to="UserInterface/InformationArea/ElementInformation" method="_on_waned_circle_area_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/InformationArea/ElementInformation/CenterContainer/CenteredControl/WanedCircleArea" to="UserInterface/InformationArea/ElementInformation" method="_on_waned_circle_area_mouse_exited"]
[connection signal="mouse_entered" from="UserInterface/BattleArea" to="UserInterface/CardArea/HandCenterer/HandArea" method="_on_battle_area_mouse_entered"]
[connection signal="button_down" from="DebugArea/HBoxContainer/Save" to="DebugArea" method="_on_save_button_down"]
[connection signal="button_down" from="DebugArea/HBoxContainer/Draw" to="DebugArea" method="_on_draw_button_down"]
[connection signal="button_down" from="DebugArea/HBoxContainer/ResetState" to="DebugArea" method="_on_reset_state_button_down"]
